--- a/public/style.css
+++ b/public/style.css
@@ -178,7 +178,7 @@ button:focus {
 }
 
 #button-wall {
-    margin-left: 25px;
+    margin-left: 5px;
     position: relative;
     bottom: 13px;
 }
@@ -304,7 +304,7 @@ input {
     background-color: #fff1e6;
     border-radius: 10px;
     box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.75);
-    margin-right: 20px;
+    margin: 20px 10px;
     padding: 10px;
 }
 
